# coco-accelerated

./: .gitignore  Cargo.toml
coco-futhark/src/: lib.rs
src/: batch.rs  lib.rs
src/bbob/: futhark.rs  params.rs  problem.rs
