[package]
name = "coco-accelerated"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["coco-legacy", "coco-futhark"]

[features]
c = ["coco-futhark/c"]
multicore = ["coco-futhark/multicore"]
opencl = ["coco-futhark/opencl"]
cuda = ["coco-futhark/cuda"]
default = ["c"]

[dependencies]
coco-legacy = { path = "./coco-legacy" }
coco-futhark = { path = "./coco-futhark", default-features = false }
float_eq = "1.0.1"
ordered-float = "4.1.0"
strum = { version = "0.25.0", features = ["derive"] }
